GRP-724: change logs dir of ui/ws, chmod +x and dos2unix the script, set memory of tomcat
git-svn-id: https://svn.internet2.edu/svn/i2mi/branches/GROUPER_2_0_BRANCH@7916 bc24b658-cf39-4249-b827-e3526eaaeb42